[package]
name = "map_checker"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
log = "0.4.22"
regex = "1.11.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_yaml = "0.9.34"
simple_logger = "5.0.0"
walkdir = "2.5.0"

[profile.release]
opt-level = 3
debug = false
